fixed circle-cropped icons

--- a/homepage.css
+++ b/homepage.css
@@ -51,21 +51,15 @@ body {
 }
 
 .item_img {
-    transition-duration: 2000ms;
     width: 70px;
     height: 70px;
     padding: 15px;
-    border-radius: 50%;
-    background: rgb(25, 32, 46, 1);
 }
 
 .item_img:hover {
-    transition-duration: 500ms;
     width: 70px;
     height: 70px;
     padding: 15px;
-    border-radius: 50%;
-    background: rgb(25, 32, 46, 0);
 }
 
 .grid{
@@ -79,9 +73,21 @@ body {
   }
 
 .grid_item {
+    transition-duration: 2000ms;
     position: absolute;
     justify-content: center;
     width: 100px;
     height: 100px;
     border-radius: 50%;
+    background: rgba(48, 44, 54, 1);
+}
+
+.grid_item:hover {
+    transition-duration: 500ms;
+    position: absolute;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: rgba(48, 44, 54, 0);
 }
